syntax = "proto3";

package generated;

option go_package = "./generated";

message Item {
  string id = 1;
  int32 amount = 2;
  string description = 3;
}

// Order Service
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  repeated Item items = 1;
}

message CreateOrderResponse {
  string order_id = 1;
}

// Payment Service
service PaymentService {
  rpc GenerateBill(GenerateBillRequest) returns (GenerateBillResponse);
}

message GenerateBillRequest {
  repeated Item items = 1;
}

message GenerateBillResponse {
  string bill_id = 1;
  int32 total_amount = 2;
}
